<resources>
    <string name="app_name">Covid 19 Tracker App</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="last_updated">Last Updated</string>
    <string name="state_data">State Data</string>
    <string name="samples_tested">Samples Tested</string>
    <string name="confirmed">Confirmed</string>
    <string name="powered_by_litu_2003">Powered By Litu © 2003</string>
    <string name="lgm_project_task_1">LGM PROJECT TASK-1</string>
    <string name="loading">Loading...</string>
    <string name="search">Search</string>
    <string name="total_cases">Total Cases</string>
    <string name="state">State</string>
    <string name="last_update">Last update</string>
    <string name="district_data">District Data</string>
    <string name="district_city">District/City</string>
    <string name="data_of_india">Data Of India</string>
    <string name="data_of_state">Data of State</string>
    <string name="test">Test</string>
    <string name="data_of_city">Data of City</string>
</resources>