<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_district_wise_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistrictDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_district_wise_search_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/background"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#c4c4c4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/districtTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/district_city"
                    android:textStyle="bold"
                    android:textColor="#ff003d"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/total_cases"
                    android:textStyle="bold"
                    android:textColor="#ff003d"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/districtRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>