<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndiisualDistrictActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ff003d"
                android:elevation="4dp"
                app:title="@string/data_of_city"
                app:titleTextColor="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:targetApi="m" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        android:weightSum="2">

                        <org.eazegraph.lib.charts.PieChart
                            android:id="@+id/districtPie"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:layout_weight="1"
                            android:padding="6dp"
                            app:egDrawValueInPie="true"
                            app:egInnerPaddingColor="#bee3db"
                            app:egLegendHeight="0dp"
                            app:egValueTextSize="0dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingStart="36dp"
                            tools:ignore="RtlSymmetry">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="#007afe" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="@string/active"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="#08a045" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="@string/recovered"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="#f6404f" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="@string/deaths"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="2"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_each_district_confirmed_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleConfirmed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:text="@string/confirmed"
                            android:textColor="#fbc233"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/districtConfirmed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/districtConfirmedNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:gravity="center"
                            android:textColor="#fbc233"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_each_distict_active_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleActive"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:text="@string/active"
                            android:textColor="#78d8f3"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/districtActive"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/districtActiveNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:gravity="center"
                            android:textColor="#78d8f3"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_each_district_recovered_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:text="@string/recovered"
                            android:textColor="#7ec544"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/districtRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/districtRecoveredNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:gravity="center"
                            android:textColor="#7ec544"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_each_district_death_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleDeath"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:text="@string/deaths"
                            android:textColor="#f6404f"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/districtDeath"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/districtDeathNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:gravity="center"
                            android:textColor="#f6404f"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>